# oidc-client-demo

./: .dockerignore  .gitignore  Dockerfile  README.md  config.toml.example  pyproject.toml
.buildkite/: pipeline.yaml  pipelinegen.toml
.deploy/: manifest-builder.toml  oidc-client-demo.toml
src/oidc_client_demo/: __init__.py  app.py  auth.py  config.py
src/oidc_client_demo/static/: site.css
src/oidc_client_demo/templates/: home.html  profile.html
src/website_with_login/: __init__.py  app.py  auth.py  config.py
tests/: test_app.py  test_config.py
