[project]
name = "oidc-client-demo"
dynamic = ["version"]
description = "A minimal Starlette website with OIDC login"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.3.0",
    "click>=8.0.0",
    "hypercorn>=0.17.0",
    "jinja2>=3.1.0",
    "requests>=2.32.0",
    "starlette>=0.46.0",
]

[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[project.scripts]
oidc-client-demo = "oidc_client_demo.app:main"

[dependency-groups]
dev = [
    "httpx",
    "pytest",
    "ruff",
]

[tool.uv]
package = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/oidc_client_demo/_version.py"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose"
