[project]
name = "oidc-client-demo"
version = "0.1.0"
description = "A minimal Starlette website with OIDC login"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "authlib",
    "click",
    "hypercorn",
    "itsdangerous",
    "jinja2",
    "requests",
    "starlette",
    "httpx",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project.scripts]
oidc-client-demo = "oidc_client_demo.app:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty>=0.0.33",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose"
